Finish touching up asthetics

--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
 		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 	</head>
 	<body>
-		<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="logo" />
-		<form>
-			<input type="text_field" name="search" class="search-bar">
-			<input type="submit" value="Google Search" class="submit btn btn-primary">
-			<input type="submit" value="I'm Feeling Lucky" class="submit btn btn-primary">
-		</form>
+		<div class="nav">
+			<ul class="pull-right">
+				<li>Martin</li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Images</a></li>
+				<li><a href="#"><img class="app" src="http://www.englewoodschools.net/cms/lib8/CO01900647/Centricity/Domain/1009/GoogleAppsIcon.png" /></a></li>
+				<li><a href="#"><img class="notification" src="https://d3rnbxvnd0hlox.cloudfront.net/images/channels/651849913/icons/on_color_large.png" /></a></li>
+				<li><a href="#"><img class="round" src="https://lh3.googleusercontent.com/-PsspOWtJGvA/AAAAAAAAAAI/AAAAAAAAAAA/ADhl2ypEaYclSiJ7-klCtozeKb_pZCnHeg/mo/photo.jpg?sz=46"></a></li>
+			</ul>
+		</div>
+
+		<div class="main">
+			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="logo" />
+			<form>
+				<div class="search-bar">
+					<input type="text_field" name="search" class="search-input">
+					<img id="sbv" src="http://www.eronmedya.com/images/big-deep-voice-over-icon.png" />
+				</div>
+				<input type="submit" value="Google Search" class="submit btn btn-primary">
+				<input type="submit" value="I'm Feeling Lucky" class="submit btn btn-primary">
+			</form>
+		</div>
 
 		<div class="footer">
 			<ul class="pull-left">
