--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<li>Martin</li>
 				<li><a href="#">Gmail</a></li>
 				<li><a href="#">Images</a></li>
-				<li><a href="#"><img class="app" src="http://www.englewoodschools.net/cms/lib8/CO01900647/Centricity/Domain/1009/GoogleAppsIcon.png" /></a></li>
+				<li><a href="#"><img class="app" src="https://cdn4.iconfinder.com/data/icons/web-mobile1/100/Untitled-34-512.png" /></a></li>
 				<li><a href="#"><img class="notification" src="https://d3rnbxvnd0hlox.cloudfront.net/images/channels/651849913/icons/on_color_large.png" /></a></li>
 				<li><a href="#"><img class="round" src="https://lh3.googleusercontent.com/-PsspOWtJGvA/AAAAAAAAAAI/AAAAAAAAAAA/ADhl2ypEaYclSiJ7-klCtozeKb_pZCnHeg/mo/photo.jpg?sz=46"></a></li>
 			</ul>
